<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.lenovo.smartreaderapplication.Signup">


    <TextView
        android:id="@+id/signTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:freezesText="false"
        android:gravity="center_vertical|center"
        android:text="@string/Signup"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:id="@id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="49dp"
                android:drawableLeft="@mipmap/ic_p"
                android:hint="@string/Username"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:keyboardNavigationCluster="false" />

            <EditText
                android:id="@id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:drawableLeft="@mipmap/ic_p"
                android:hint="@string/FirstName"
                android:inputType="text"
                 />

            <EditText
                android:id="@id/LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LastName"
                android:inputType="text"
                android:drawableLeft="@mipmap/ic_p" />
            <EditText
                android:id="@id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PhoneNumber"
                android:inputType="phone"
                android:drawableLeft="@mipmap/ic_phone" />
            <EditText
                android:id="@id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@mipmap/ic_emaill" />

            <EditText
                android:id="@id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_lock"
                android:hint="@string/Password"
                android:inputType="textVisiblePassword|textNoSuggestions" />
            <EditText
                android:id="@id/confiemPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ConfirmPassword"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:drawableLeft="@mipmap/ic_lock" />

            <Button
                android:id="@+id/done"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19dp"
                android:layout_marginStart="110dp"
                android:background="@color/gray"
                android:text="@string/done"
                android:textColor="@color/yellow"
                android:layout_marginLeft="110dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
